--- a/index.html
+++ b/index.html
@@ -1,12 +1,3 @@
->
-
-
-
-</body>
-
-
-
-            </html>
 <!DOCTYPE html>
 
 <html lang="en">
@@ -373,13 +364,21 @@
 
         <div class="section-title">
 
-          <h2>tugas video</h2>
+          <h2>video assignments</h2>
 
         </div>
 
+        
 
+        <h2>cultural arts stage</h2>
 
-          <iframe width="1080px" height="720px" src="https://www.youtube.com/embed/6afJ5gx1nnc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="560" height="315" src<iframe width="560" height="315" src="https://www.youtube.com/embed/6afJ5gx1nnc?rel=0&modestbranding=1&controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+          
+
+          <h2>story telling kelompok 1</h2>
+
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/BJsnN1Ci4Cg?rel=0&modestbranding=1&controls=0&showinfo=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 
@@ -607,4 +606,4 @@
 
 
 
-      </html>
+            </html>
